Closed Bug 1640381 Opened 5 years ago Closed 5 years ago

Assertion failure: ViewportUtils::IsZoomedContentRoot running toolkit/components/printing/tests/browser_page_change_print_original.js

Categories

(Core :: Panning and Zooming, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(1 file)

No description provided.

In print preview documents the child of the root scroll frame is a page sequence frame.

I did a basic test of pinch zooming and panning (in a debug build and in an opt build) around on a print preview document and it seemed to work fine.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f5409e132845 Make ViewportUtils::IsZoomedContentRoot handle print preview documents. r=botond
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Regressions: 1661608
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: